[gd_scene load_steps=20 format=3 uid="uid://b0jelcu6ony24"]

[ext_resource type="Texture2D" uid="uid://wulpemwrdaj2" path="res://map.png" id="1_82oto"]
[ext_resource type="Script" path="res://map_screen.gd" id="1_kbeoq"]
[ext_resource type="Texture2D" uid="uid://b7mxmonh4c4f0" path="res://blue_circle.png" id="2_44dp8"]
[ext_resource type="Texture2D" uid="uid://btcrcqmbk2a07" path="res://yellow_border.png" id="4_i5tja"]
[ext_resource type="AudioStream" uid="uid://c3rudea7vupyy" path="res://slow_down.ogg" id="5_djs5m"]
[ext_resource type="AudioStream" uid="uid://dlhjestq0evms" path="res://stop sign.mp3" id="6_jshlt"]
[ext_resource type="AudioStream" uid="uid://diyxjgryfgn0x" path="res://look_both_ways.ogg" id="7_6ohgr"]

[sub_resource type="Animation" id="Animation_biyq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("red_screen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.47821, 0, 0.0257839, 1)]
}

[sub_resource type="Animation" id="Animation_agx0s"]
resource_name = "red_screen_pulse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("red_screen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.764706, 0, 0.0666667, 1), Color(0.47821, 0, 0.0257839, 1), Color(0.764706, 0, 0.0666667, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yyg1p"]
_data = {
"RESET": SubResource("Animation_biyq7"),
"red_screen_pulse": SubResource("Animation_agx0s")
}

[sub_resource type="Animation" id="Animation_ej3rp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("red_screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_q3f6m"]
resource_name = "red_screen_fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("red_screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkmao"]
_data = {
"RESET": SubResource("Animation_ej3rp"),
"red_screen_fade": SubResource("Animation_q3f6m")
}

[sub_resource type="Animation" id="Animation_udix3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../yellow_border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cdgii"]
resource_name = "yellow_border_pulse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../yellow_border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.647059, 0.647059, 0.647059, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vk3c"]
_data = {
"RESET": SubResource("Animation_udix3"),
"yellow_border_pulse": SubResource("Animation_cdgii")
}

[sub_resource type="Animation" id="Animation_3tdhj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../yellow_border:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3pq0i"]
resource_name = "yellow_border_fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../yellow_border:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5jyn"]
_data = {
"RESET": SubResource("Animation_3tdhj"),
"yellow_border_fade": SubResource("Animation_3pq0i")
}

[node name="map_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kbeoq")

[node name="map" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 418.0
offset_bottom = 646.0
texture = ExtResource("1_82oto")
expand_mode = 3

[node name="yellow_border" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -3.0
offset_right = 421.0
offset_bottom = 649.0
texture = ExtResource("4_i5tja")
expand_mode = 1

[node name="marker" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 530.0
offset_right = 60.0
offset_bottom = 560.0
texture = ExtResource("2_44dp8")

[node name="red_screen" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -5.0
offset_top = -6.0
offset_right = 433.0
offset_bottom = 654.0
color = Color(0.47821, 0, 0.0257839, 1)

[node name="slow_down" type="Label" parent="red_screen"]
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 429.0
offset_bottom = 656.0
theme_override_font_sizes/font_size = 118
text = "SLOW
DOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="stop" type="Label" parent="red_screen"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 429.0
offset_bottom = 656.0
theme_override_font_sizes/font_size = 118
text = "STOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="red_screen_pulse" type="AnimationPlayer" parent="."]
autoplay = "red_screen_pulse"
libraries = {
"": SubResource("AnimationLibrary_yyg1p")
}

[node name="red_screen_fade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gkmao")
}

[node name="yellow_border_pulse" type="AnimationPlayer" parent="."]
root_node = NodePath("../red_screen")
autoplay = "yellow_border_pulse"
libraries = {
"": SubResource("AnimationLibrary_1vk3c")
}

[node name="yellow_border_fade" type="AnimationPlayer" parent="."]
root_node = NodePath("../yellow_border_pulse")
libraries = {
"": SubResource("AnimationLibrary_i5jyn")
}

[node name="speed_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_djs5m")
volume_db = -15.961

[node name="stop_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jshlt")
volume_db = -11.869

[node name="stop_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="look_both_ways" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6ohgr")
volume_db = -15.476

[connection signal="timeout" from="stop_timer" to="." method="_on_stop_timer_timeout"]
